# ChangeLog for net-ftp/lftp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.446 2014/01/15 09:24:04 ago Exp $

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> lftp-4.4.14.ebuild:
  Stable for ia64, wrt bug #497632

  14 Jan 2014; Agostino Sarubbo <ago@gentoo.org> lftp-4.4.14.ebuild:
  Stable for ppc, wrt bug #497632

  12 Jan 2014; Markus Meier <maekke@gentoo.org> lftp-4.4.14.ebuild:
  arm stable, bug #497632

  11 Jan 2014; Lars Wendler <polynomial-c@gentoo.org> lftp-4.4.14.ebuild:
  x86 stable (bug #497632).

  11 Jan 2014; Lars Wendler <polynomial-c@gentoo.org> lftp-4.4.14.ebuild:
  amd64 stable (bug #497632).

  10 Jan 2014; Jeroen Roovers <jer@gentoo.org> lftp-4.4.14.ebuild:
  Stable for HPPA (bug #497632).

  19 Dec 2013; Jeroen Roovers <jer@gentoo.org> -lftp-4.5.0_pre20131206.ebuild:
  Old.

*lftp-4.4.14 (13 Dec 2013)

  13 Dec 2013; Jeroen Roovers <jer@gentoo.org> -lftp-4.4.9-r1.ebuild,
  -lftp-4.4.11.ebuild, -lftp-4.4.13.ebuild, +lftp-4.4.14.ebuild:
  Version bump.

*lftp-4.5.0_pre20131214 (13 Dec 2013)

  13 Dec 2013; Jeroen Roovers <jer@gentoo.org> +lftp-4.5.0_pre20131214.ebuild:
  Version bump.

*lftp-4.5.0_pre20131206 (06 Dec 2013)

  06 Dec 2013; Jeroen Roovers <jer@gentoo.org> +lftp-4.5.0_pre20131206.ebuild:
  Version bump.

*lftp-4.4.13 (26 Nov 2013)

  26 Nov 2013; Jeroen Roovers <jer@gentoo.org> +lftp-4.4.13.ebuild:
  Version bump.

*lftp-4.4.11 (12 Nov 2013)

  12 Nov 2013; Jeroen Roovers <jer@gentoo.org> -lftp-4.4.10.ebuild,
  +lftp-4.4.11.ebuild:
  Version bump.

  13 Oct 2013; Fabian Groffen <grobian@gentoo.org> lftp-4.4.10.ebuild:
  Fix for Prefix by yegle in bug #487720

*lftp-4.4.10 (11 Oct 2013)

  11 Oct 2013; Jeroen Roovers <jer@gentoo.org> +lftp-4.4.10.ebuild:
  Version bump.

  07 Oct 2013; Jeroen Roovers <jer@gentoo.org> lftp-4.4.9-r1.ebuild:
  Add another dependency.

*lftp-4.4.9-r1 (07 Oct 2013)
