@@ -7,27 +7,17 @@ AUX lftp-4.3.8-gets.patch 430 SHA256 20f3f931132aae70c6dc8b03368419951bb4ec9f0d4
 DIST lftp-4.4.14.tar.xz 1459988 SHA256 61ceaefbd476061e728e2b1294c27866402237d1d6539ed9ca98769dba3c9189 SHA512 4915392317115ab497b3eb722ef96a17ad3edb114cd639ec39b9eb586d2e5cc0a4c5fa769704095347df774c600e2f8a30a062f27903185c1c2e69e403357928 WHIRLPOOL 65aeca83a5570c0c53de4045d20d7bb8767b0e96fc10525de3b6552ae40ac8845b0cb1cb770f2bebed0dc973aac436a66d3372a722e969757d98ee9097b36f9a
 DIST lftp-4.4.8.tar.xz 1434312 SHA256 acdb4641874c950d80c699de8814fd7f24d54557511f6fb63d88f87227fbb34d SHA512 c9bed7be0cc8b9d65eaf1f2996380f36c87739d1679216af8cced36f516019776280a2d0bbf2ed26b0ed428d08549d41772e5028753834f26d48b7919d8fe9e0 WHIRLPOOL 170aa5ca4c63710660ef936c032681b5680d200cc374858cdf14d29c51a43b8e617649563875bc326279edd6e75e1e4b0da09d3d4d3852c848a6d3b3aa2b192c
 DIST lftp-4.4.9.tar.xz 1444684 SHA256 96ad4da1c0cec9899a9aa7ba61b7dd09994e1fdb3577eb75df15742e53797107 SHA512 de3facb2496130a3df1cc0d66f5cdd377ce4ec376e9ffa3656e2e8b113bb72058fe8f8671b99188adca46a9194661bcff40999d9bfbd2a4db3c13e11ec775ff4 WHIRLPOOL d8e96366dba0a4cbea260b18476227b098e2327ac99af8301e0090b11cca93ea5ba868b1c60b5a87cd1ece04ac12cd906cd1d35ad6e94ff2752efd0dc219f286
-DIST lftp-pre4.5.0.20131214.tar.gz 2545073 SHA256 96acaf4c7146fce22694d1c6f6d090f48bbfbd6e66cf5aabcb609f61b66b1489 SHA512 b40fb455ba70a7e1092938ff0d7f1dc18efc94e1ff3a5a417ab766a1176f27ec7b27e73b8be0676de080daa031b8e99eb8980b925b3adf31e50a4652f1221453 WHIRLPOOL c14624930a2513bccd4332d870b8d4b28531c9f44c47c49ad715c1ca2cd9c9ff39ce879356ed1ea72320be7055ce8dad583cf99e10ed8bba4819e8a347c41014
+DIST lftp-4.4.99.20140116.tar.gz 2545583 SHA256 eaf1a468e5ef9af186b4cb7ec1d1f4b0f8a33dd041173a68cc352c4ae362e4ab SHA512 b417912c198ce6e90555dd3208e369750cae23d7c86e3a3b644abfd6cab76773d341f4a2620ef4df74cb376b2a05c496460f6c01e799186864e0a9c4820d54f3 WHIRLPOOL 1a0cd3944413490e5755d14968168595ee01ea683a15fcbdddf3a7ed680cf05aebacfd135750a29e929fd03c36177e3351af07cced7fbe68e9d08299f027e5f9
 EBUILD lftp-4.4.14.ebuild 2182 SHA256 f74472a7d587cb134b9a46fcc3939c900fd081cbff530fe4d23573526045a537 SHA512 c3b9c87a8a616cd65028c4cb1946449e1ef91f39bf4979154cf6862d81cd90b0376f6eb42f3f6d59546a84483485d464da64a14675de02921e4c3573d496dca0 WHIRLPOOL 0d7c41025ab456684356aa7c1359c2cc3f4419a55a0c23e3d95e5112bb4390acfd89e563481c3c45a9f73571c15a1167e0461ffaffce8b7a05fe1ed267f53975
 EBUILD lftp-4.4.8.ebuild 1889 SHA256 4fb8de0226fda1d25d891819f5704754a98ba8acab5e6ea6d9cbfbd6ceeeefd5 SHA512 59460286e4b8b8d51d5efb80c6bafd0748351812198e24453afeaba84a5d2403a57dec6cced6b3c87e12c350e30e74bcc3bba7f9206b0741a1aad5bf82f5ca86 WHIRLPOOL 671dcb179aa0f18227ca0dc5e6b90d27c75c636a4ab1ee2ff7b035acefcddec3c3a5f46c46c2cf02d07123c75990009e31f3f083111df5a3757d38f6b181fbea
 EBUILD lftp-4.4.9.ebuild 1873 SHA256 dec5cd189ccbaa1c2702203629db71bdd15515ff5b1b96452505a052eec9b596 SHA512 7e4a6ed703ec921bbc2ff65886059d282f94a13cbffb07c59eab4680c3528cb19cd643e783d9c933f914f3ff2639ffd53556260fdb8d4ff449550ccad1f1b8fc WHIRLPOOL b19fa7e3cf5def1813063182f87b1078f99e8390b8dc7fdf69298cb900f45ed2c92653d34f21d3c9b8f0881e7e3bb37208532752e9c5b0ff9ed972d7da51ff7f
-EBUILD lftp-4.5.0_pre20131214.ebuild 2103 SHA256 4a8f6d55ebc9e4c8826f8c8b0325557872ff4864c1896230aca4d646b4c3b997 SHA512 2af7c65599cb388e0885d83825d89b6af3149eb5bbeb4b1bbfe2ad21b89b562421a7a03d73b2bb2779e1007046a5c4b39266f04ad439d3319a7c06eb9a2786e5 WHIRLPOOL 2e314f1143d381587e8bb89d15bb9a9cbd649231daf68f4c843ccfc89b483a63190ac25ee085b965379b82dbe55fdeafb0aa3e9f99cf4b973ed652da506c07ea
-MISC ChangeLog 55958 SHA256 e5041cb7f0e01ea13ec7a4640c2f5d69054629beb2987b9498898a6c5635f931 SHA512 d1ef376d24636d64f225120afd53a1391312c4f1ccf5077652f6c6b6c8def60cea14e7b19e74a7617263b71c502b5573911cbfd5703f6f71daa9724961ec5aeb WHIRLPOOL 0972147a7faa5f40a5030fbb616630e3d7b0722fa04cdbe205301cf30a007d04d0abec4c770a3e16ed93e71a0dec3418f14f782388c7230a4138f8dc93afee03
+EBUILD lftp-4.4.99_pre20140116.ebuild 2081 SHA256 273c426071187da865591da2b5c7c2903b9e456003ce09d3e08dda555038987a SHA512 1e56e0501eadf068cf64e743a2d271094077d9d0f955f8bd9668751c12798c411a52e57987b070beb90ef2a3414eba0495fe7af23f294ae06e3de60d360fecc5 WHIRLPOOL f94133b46c9970fbd89fd12e109282467f1a23e5fb97bedea15ef9cb57a65beb90b4e84b2bd745cc8f38e782fce42180daae5f7592fefebde123c01eb3439a0a
+MISC ChangeLog 56129 SHA256 0aff9423ec9481b96d0baf22c2af73eb963507ddcd33204f04dcc2ca0d39f70b SHA512 e7c41a129b7dabdc8d3a650cf9fb242164bc8a12b630a77a58ce94a1cbb1d05678ce8ff6dda42f6291decd57703b953fb621082f4878f23d40340d8c58c9d5da WHIRLPOOL a7364429dbf4e6c2500a96c79f4b8383738b5af80e526bd21cb3668406a264e0daeb48bb71703e664139e668f9935a7e55317cc0fb589d5c2f7aa0f25ae4bbc5
 MISC metadata.xml 531 SHA256 ce1a5e5ed227a35582fbc8cae768a0f6b7769ac49194197926882f47600b519f SHA512 6058e3d0fbf8032fc97c48d9742afea487ac89bbe88281e4a4fd392018a42c7ff5bab39b7f01b16c70bd24735cf3b6b9ea613f957f71075f095cf3b109516cd5 WHIRLPOOL cc07076f948d4cbd81a4bd799c8e5f4a06f5665a732034456778d51c7bdd8486c04cd55bfdbdf85f013379f231b535508e46572b191a7bd30d04f6692b0647c6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS1lO1AAoJELp701BxlEWfQdcP/iJVkGXmlPupRIeOYhBqUuRT
-Y44ShJFYqHmKu83bRjby//D9ZAt4YTiDsSaU1sgiNQiH4leF9H1l9Nah9J7OD5lQ
-U2JXn7+vd0nxIh6BdBdKh1pUltAqMFEcHp76U+sB0MAf0XQFS+NuApT+nd6nw34u
-+oGGBYvovidJQFqeJoYTV7LL5jv5HE9iUTHTfv3V7AH221pNNAgjbqGCe0ii6TXg
-d5g+68dFoN+Z7jzC/V4Q3rxXyH7Ufxi7iXWx2TmFRqtQKNKkWqu4e78f8Vj4i9k1
-8A2cdCjq8B1n5JulQUJtfG/AJOGC2NuQPqckJZdo5E6Xij9DPG6c4s2AmsC7j2CK
-9LJPG14Ec68yP0ijHwdtJjuaa7ax0sskEyDh9A60OY+UCfhLykG/GifLBdd9+Uws
-NdM9lPnR4J1ZCpi6OXDF8RgXip+inRJ/l+PtP6y3YnRRhjB9wHrSkR7kArqixHXl
-XwqZ3i9iENPbte18kzhR8wDqtsEXnxJeK3Syhn2PpipvcLPeAh34fSdouIWih9jR
-Jh4+1Qs1D7JorZiLRulMBCLG7PcpE7s/Szg2PvxRRKY8AbjgV/1ppkH+Tp1G7IZL
-YQmlmJ7ktMc/OBMfpnTS0uRS2rNmPO+5zOeCZj95JaTii19phEZp4fTQtCo3RN/g
-7uDUkloIZpKm8GErPpp1
-=onSD
+iEYEAREIAAYFAlLYB08ACgkQVWmRsqeSphNjnQCfQ48AEny1qqenLi6k81Vm69u7
+pn0An0yqxzEYD3zIcwOMcKfDPMLK20Wq
+=I8Df
 -----END PGP SIGNATURE-----
