@@ -1,6 +1,12 @@
 # ChangeLog for net-ftp/lftp
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.446 2014/01/15 09:24:04 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.447 2014/01/16 16:22:38 jer Exp $
+
+*lftp-4.4.99_pre20140116 (16 Jan 2014)
+
+  16 Jan 2014; Jeroen Roovers <jer@gentoo.org> +lftp-4.4.99_pre20140116.ebuild,
+  -lftp-4.5.0_pre20131214.ebuild:
+  Version bump.
 
   15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> lftp-4.4.14.ebuild:
   Stable for ia64, wrt bug #497632
